fixed project photo alignment and added viper project photo

--- a/src/stylesheets/stylesheet.css
+++ b/src/stylesheets/stylesheet.css
@@ -937,6 +937,11 @@
     } 
 
     .upper-content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
         font-family: "lora";
         font-weight: 200;
         letter-spacing: 1.5px;
